{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 74,
  "lineage": "07724ab3-1fa5-c0e8-7764-a663eca81e57",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911725061493:internet-gateway/igw-0aabf378e367374f5",
            "id": "igw-0aabf378e367374f5",
            "owner_id": "911725061493",
            "region": "us-east-1",
            "tags": {
              "Name": "my-vite-react-app-igw",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            },
            "tags_all": {
              "Name": "my-vite-react-app-igw",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            },
            "vpc_id": "vpc-0d98d76268d93d7c8"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:911725061493:loadbalancer/app/my-vite-react-app-alb/1df9e24618b59396",
            "arn_suffix": "app/my-vite-react-app-alb/1df9e24618b59396",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-vite-react-app-alb-1860014304.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:911725061493:loadbalancer/app/my-vite-react-app-alb/1df9e24618b59396",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-vite-react-app-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0902e15d9da3b4a6f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-060f50d1d370ca90b"
              },
              {
                "subnet_id": "subnet-06143bf5a665a00bf"
              }
            ],
            "subnets": [
              "subnet-060f50d1d370ca90b",
              "subnet-06143bf5a665a00bf"
            ],
            "tags": {
              "Name": "my-vite-react-app-alb",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            },
            "tags_all": {
              "Name": "my-vite-react-app-alb",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            },
            "vpc_id": "vpc-0d98d76268d93d7c8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:911725061493:listener/app/my-vite-react-app-alb/1df9e24618b59396/521ec1fb48339859",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:911725061493:targetgroup/my-vite-react-app-tg/f3797ce69ccc3a08",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:911725061493:listener/app/my-vite-react-app-alb/1df9e24618b59396/521ec1fb48339859",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:911725061493:loadbalancer/app/my-vite-react-app-alb/1df9e24618b59396",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:911725061493:targetgroup/my-vite-react-app-tg/f3797ce69ccc3a08",
            "arn_suffix": "targetgroup/my-vite-react-app-tg/f3797ce69ccc3a08",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:911725061493:targetgroup/my-vite-react-app-tg/f3797ce69ccc3a08",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-vite-react-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "my-vite-react-app-tg",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            },
            "tags_all": {
              "Name": "my-vite-react-app-tg",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d98d76268d93d7c8"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aabf378e367374f5",
            "id": "r-rtb-0f2088519bbaff5131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0f2088519bbaff513",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911725061493:route-table/rtb-0f2088519bbaff513",
            "id": "rtb-0f2088519bbaff513",
            "owner_id": "911725061493",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "my-vite-react-app-rt-public",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            },
            "tags_all": {
              "Name": "my-vite-react-app-rt-public",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d98d76268d93d7c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0659d232a0f2ccd7d",
            "region": "us-east-1",
            "route_table_id": "rtb-0f2088519bbaff513",
            "subnet_id": "subnet-060f50d1d370ca90b"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0965e9f6dc3240429",
            "region": "us-east-1",
            "route_table_id": "rtb-0f2088519bbaff513",
            "subnet_id": "subnet-06143bf5a665a00bf"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911725061493:security-group/sg-0902e15d9da3b4a6f",
            "description": "ALB security group",
            "egress": [],
            "id": "sg-0902e15d9da3b4a6f",
            "ingress": [],
            "name": "my-vite-react-app-alb-sg",
            "name_prefix": "",
            "owner_id": "911725061493",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vite-react-app-alb-sg",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            },
            "tags_all": {
              "Name": "my-vite-react-app-alb-sg",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d98d76268d93d7c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911725061493:security-group/sg-0c5b9add6e5ef9fa0",
            "description": "ECS service SG",
            "egress": [],
            "id": "sg-0c5b9add6e5ef9fa0",
            "ingress": [],
            "name": "my-vite-react-app-svc-sg",
            "name_prefix": "",
            "owner_id": "911725061493",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vite-react-app-svc-sg",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            },
            "tags_all": {
              "Name": "my-vite-react-app-svc-sg",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d98d76268d93d7c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911725061493:subnet/subnet-060f50d1d370ca90b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060f50d1d370ca90b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911725061493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "my-vite-react-app-public-0",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "my-vite-react-app-public-0",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d98d76268d93d7c8"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911725061493:subnet/subnet-06143bf5a665a00bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06143bf5a665a00bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911725061493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "my-vite-react-app-public-1",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "my-vite-react-app-public-1",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d98d76268d93d7c8"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911725061493:vpc/vpc-0d98d76268d93d7c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0306f4f3b66285256",
            "default_route_table_id": "rtb-02e1ca30113d7362b",
            "default_security_group_id": "sg-0bab1fb6c18c55c6d",
            "dhcp_options_id": "dopt-6b5e680f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d98d76268d93d7c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e1ca30113d7362b",
            "owner_id": "911725061493",
            "region": "us-east-1",
            "tags": {
              "Name": "my-vite-react-app-vpc",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            },
            "tags_all": {
              "Name": "my-vite-react-app-vpc",
              "Project": "my-vite-react-app",
              "Stack": "ecs-fargate"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911725061493:security-group-rule/sgr-01991505a858a7fc9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01991505a858a7fc9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0902e15d9da3b4a6f",
            "security_group_rule_id": "sgr-01991505a858a7fc9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "svc_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911725061493:security-group-rule/sgr-0b15e6c2f63f5e880",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b15e6c2f63f5e880",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0c5b9add6e5ef9fa0",
            "security_group_rule_id": "sgr-0b15e6c2f63f5e880",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911725061493:security-group-rule/sgr-046f517e4c3641e43",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-046f517e4c3641e43",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0902e15d9da3b4a6f",
            "security_group_rule_id": "sgr-046f517e4c3641e43",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "svc_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911725061493:security-group-rule/sgr-027bb0b7ebc0d9733",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-027bb0b7ebc0d9733",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0902e15d9da3b4a6f",
            "region": "us-east-1",
            "security_group_id": "sg-0c5b9add6e5ef9fa0",
            "security_group_rule_id": "sgr-027bb0b7ebc0d9733",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.service",
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}